tests/pass/ExceptionThrow.java
package pass;

public class ExceptionThrow {

	public void throwException(String message) throws Exception {
		throw new Exception(message);
	}
	
}
